--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/Saving.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/Saving.cshtml
@@ -2493,7 +2493,7 @@
             //#region 顯示試算結果 - 描述區塊
             function renderResultDescription(result, Target, Years) {
                 let TargetVal = parseFloat(Target) * 10000;
-                let TargetFormatVal = TargetVal.toLocaleString();
+                let TargetFormatVal = formatValue(TargetVal);
                 let InsufficientAmountVal;
                 let InsufficientAmountFormatVal;
 
@@ -2503,7 +2503,7 @@
                     resultHasGap = false;
                 } else {
                     InsufficientAmountVal = TargetVal - result;
-                    InsufficientAmountFormatVal = (InsufficientAmountVal).toLocaleString();
+                    InsufficientAmountFormatVal = formatValue(InsufficientAmountVal);
                     resultHasGap = true;
                 }
 
@@ -2534,7 +2534,7 @@
 
             //#region 顯示試算結果 - tab1區塊
             function renderResultTab1(result, Target, Years, Prepared, Monthly, ExpectedRoi) {
-                let resultFormatVal = result.toLocaleString();
+                let resultFormatVal = formatValue(result);
                 let currentYear = new Date().getFullYear() + parseFloat(Years) - 1;
 
                 let TargetVal = parseFloat(Target) * 10000;
@@ -2552,13 +2552,13 @@
                 // 預期總收益
                 $("#tab1_Total").text(resultFormatVal + "元");
                 // 已準備金額
-                $("#tab1_AmountPrepared").text(parseFloat(Prepared).toLocaleString() + " 萬元");
+                $("#tab1_AmountPrepared").text(formatValue(parseFloat(Prepared)) + " 萬元");
                 // 每月投入
-                $("#tab1_MonthlyInvestment").text(parseFloat(Monthly).toLocaleString() + "萬元");
+                $("#tab1_MonthlyInvestment").text(formatValue(parseFloat(Monthly)) + "萬元");
                 // 投資報酬率
-                $("#tab1_ExpectedRoi").text(ExpectedRoi + " %");
+                $("#tab1_ExpectedRoi").text(formatValue(ExpectedRoi) + " %");
                 // 投資
-                $("#tab1_Years").text(Years + " 年");
+                $("#tab1_Years").text(formatValue(Years) + " 年");
                 // 預期收益標題
                 $("#tab1_ExpectedReturnTitle").text(currentYear + "年預期收益");
 
@@ -2640,7 +2640,7 @@
                 let resultFormatVal = result / 10000;
                 let currentYear = new Date().getFullYear() + parseFloat(Years) - 1;
                 let total = planningCompute(Years, Prepared, resultFormatVal, ExpectedRoi);
-                let totalFormatVal = total.toLocaleString();
+                let totalFormatVal = formatValue(total);
 
                 let invest = result * parseFloat(Years) * 12;
                 let prepared = parseFloat(Prepared) * 10000;
@@ -2648,13 +2648,13 @@
                 // 預期總收益
                 $("#tab2_Total").text(totalFormatVal + "元");
                 // 已準備金額
-                $("#tab2_AmountPrepared").text(parseFloat(Prepared).toLocaleString() + " 萬元");
+                $("#tab2_AmountPrepared").text(formatValue(parseFloat(Prepared)) + " 萬元");
                 //每月投入
-                $("#tab2_MonthlyInvestment").text(resultFormatVal.toLocaleString() + "萬元");
+                $("#tab2_MonthlyInvestment").text(formatValue(resultFormatVal) + "萬元");
                 //投資報酬率
-                $("#tab2_ExpectedRoi").text(ExpectedRoi + " %");
+                $("#tab2_ExpectedRoi").text(formatValue(ExpectedRoi) + " %");
                 //投資
-                $("#tab2_Years").text(Years + " 年");
+                $("#tab2_Years").text(formatValue(Years) + " 年");
                 // 預期收益標題
                 $("#tab2_ExpectedReturnTitle").text(currentYear + "年預期收益");
 
@@ -2733,7 +2733,7 @@
                 let resultFormatVal = (result * 100).toFixed(2);
                 let currentYear = new Date().getFullYear() + parseFloat(Years) - 1;
                 let total = planningCompute(Years, Prepared, Monthly, resultFormatVal);
-                let totalFormatVal = total.toLocaleString();
+                let totalFormatVal = formatValue(total);
 
                 let invest = (parseFloat(Monthly) * 10000) * parseFloat(Years) * 12;
                 let prepared = parseFloat(Prepared) * 10000;
@@ -2741,13 +2741,13 @@
                 // 預期總收益
                 $("#tab3_Total").text(totalFormatVal + "元");
                 // 已準備金額
-                $("#tab3_AmountPrepared").text(parseFloat(Prepared).toLocaleString() + " 萬元");
+                $("#tab3_AmountPrepared").text(formatValue(parseFloat(Prepared)) + " 萬元");
                 //每月投入
-                $("#tab3_MonthlyInvestment").text(parseFloat(Monthly).toLocaleString() + "萬元");
+                $("#tab3_MonthlyInvestment").text(formatValue(parseFloat(Monthly)) + "萬元");
                 //投資報酬率
-                $("#tab3_ExpectedRoi").text(resultFormatVal + " %");
+                $("#tab3_ExpectedRoi").text(formatValue(resultFormatVal) + " %");
                 //投資
-                $("#tab3_Years").text(Years + " 年");
+                $("#tab3_Years").text(formatValue(Years) + " 年");
                 // 預期收益標題
                 $("#tab3_ExpectedReturnTitle").text(currentYear + "年預期收益");
 
@@ -2820,7 +2820,7 @@
             function renderResultTab4(result, Target, Years, Prepared, Monthly, ExpectedRoi) {
                 let currentYear = new Date().getFullYear() + result - 1;
                 let total = planningCompute(result, Prepared, Monthly, ExpectedRoi);
-                let totalFormatVal = total.toLocaleString();
+                let totalFormatVal = formatValue(total);
 
                 let invest = (parseFloat(Monthly) * 10000) * parseFloat(result) * 12;
                 let prepared = parseFloat(Prepared) * 10000;
@@ -2828,13 +2828,13 @@
                 // 預期總收益
                 $("#tab4_Total").text(totalFormatVal + "元");
                 // 已準備金額
-                $("#tab4_AmountPrepared").text(parseFloat(Prepared).toLocaleString() + " 萬元");
+                $("#tab4_AmountPrepared").text(formatValue(parseFloat(Prepared)) + " 萬元");
                 //每月投入
-                $("#tab4_MonthlyInvestment").text(parseFloat(Monthly).toLocaleString() + "萬元");
+                $("#tab4_MonthlyInvestment").text(formatValue(parseFloat(Monthly)) + "萬元");
                 //投資報酬率
-                $("#tab4_ExpectedRoi").text(ExpectedRoi + " %");
+                $("#tab4_ExpectedRoi").text(formatValue(ExpectedRoi) + " %");
                 //投資
-                $("#tab4_Years").text(result + " 年");
+                $("#tab4_Years").text(formatValue(result) + " 年");
                 // 預期收益標題
                 $("#tab4_ExpectedReturnTitle").text(currentYear + "年預期收益");
 
@@ -2905,7 +2905,7 @@
 
             //#region 顯示試算結果 - tab5區塊
             function renderResultTab5(result, Target, Years, Prepared, Monthly, ExpectedRoi) {
-                let resultFormatVal = result.toLocaleString();
+                let resultFormatVal = formatValue(result);
                 let ExpectedRoiFormatVal = parseFloat(ExpectedRoi).toFixed(2);
                 let currentYear = new Date().getFullYear() + parseFloat(Years) - 1;
                 let TargetVal = parseFloat(Target) * 10000;
@@ -2915,13 +2915,13 @@
                 // 預期總收益
                 $("#tab5_Total").text(resultFormatVal + "元");
                 // 已準備金額
-                $("#tab5_AmountPrepared").text(parseFloat(Prepared).toLocaleString() + " 萬元");
+                $("#tab5_AmountPrepared").text(formatValue(parseFloat(Prepared)) + " 萬元");
                 // 每月投入
-                $("#tab5_MonthlyInvestment").text(parseFloat(Monthly).toLocaleString() + "萬元");
+                $("#tab5_MonthlyInvestment").text(formatValue(parseFloat(Monthly)) + "萬元");
                 // 投資報酬率
-                $("#tab5_ExpectedRoi").text(ExpectedRoiFormatVal + " %");
+                $("#tab5_ExpectedRoi").text(formatValue(ExpectedRoiFormatVal) + " %");
                 // 投資
-                $("#tab5_Years").text(Years + " 年");
+                $("#tab5_Years").text(formatValue(Years) + " 年");
                 // 預期收益標題
                 $("#tab5_ExpectedReturnTitle").text(currentYear + "年預期收益");
 
@@ -2987,6 +2987,18 @@
                     $('#tab5ETF').addClass('u-hidden');
                     $('#tab5Stock').addClass('u-hidden');
                 }
+            }
+            //#endregion
+
+            //#region 每三位數加"，"方法
+            function formatValue(Val) {
+                let [integerPart, decimalPart] = Val.toString().split('.');
+
+                let formattedIntegerPart = parseInt(integerPart).toLocaleString();
+
+                let formattedVal = decimalPart ? `${formattedIntegerPart}.${decimalPart}` : formattedIntegerPart;
+
+                return formattedVal;
             }
             //#endregion
 
