--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -78,13 +78,18 @@
             }
 
             function apiRequest(url, params) {
+
+                var token = $('input[name="__RequestVerificationToken"]').val();
+                var data = params ? JSON.stringify(params) : {};
+                data.__RequestVerificationToken = token;
+
                 return new Promise((resolve, reject) => {
                     $.ajax({
                         url,
                         type: 'POST',
                         dataType: 'json',
                         contentType: 'application/json',
-                        data: params ? JSON.stringify(params) : null,
+                        data: data,
                         success: function (data) {
                             resolve(data);
                         },
